fix(tableCell): add nowrap property on whitespace

--- a/packages/ui/src/assets/css/filesTable.css
+++ b/packages/ui/src/assets/css/filesTable.css
@@ -1,3 +1,9 @@
+.table-files .column-originalFileName{
+  min-width: 20rem;
+  width: 20rem;
+  max-width: 20rem;
+}
+
 .table-files .column-actions {
   max-width: 7rem;
   min-width: 7rem;
@@ -33,3 +39,4 @@
   min-width: 8rem;
   width: 8rem;
 }
+
